python/testData/quickFixes/PyAddImportQuickFixTest/referenceInsideFString/main.py
print(f'{<error descr="Unresolved reference 'lib'">l<caret>ib</error>}')